<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_viz</name>
  <version>0.1.0</version>
  <description>Visualization launchers and helpers for Depthai</description>
  <maintainer email="arlunan@ieee.org">arlunan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rviz2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
